@@ -1,1 +1,3 @@
 Makefile
+moc_*.cpp
+
